Upgrade example-viewer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       https://github.com/curran/example-viewer
     -->
 
+    <!-- TODO use unpkg everywhere -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.23.0/codemirror.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.23.0/mode/javascript/javascript.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.23.0/mode/css/css.min.js"></script>
@@ -19,9 +20,9 @@
     <script src="https://enjalot.github.io/Inlet/inlet.min.js"></script>
     <link rel="stylesheet" href="https://enjalot.github.io/Inlet/inlet.css">
 
-    <link rel="stylesheet" href="example-viewer-dist/styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/example-viewer@1.2.2/example-viewer-dist/styles.css">
   </head>
   <body>
-    <script src="example-viewer-dist/bundle.min.js"> </script>
+    <script src="https://unpkg.com/example-viewer@1.2.2/example-viewer-dist/bundle.min.js"> </script>
   </body>
 </html>
