Revise U2M9 till example-04

--- a/units/unit-02/module-09/example-04/index.html
+++ b/units/unit-02/module-09/example-04/index.html
@@ -29,6 +29,7 @@
         .range([0, sizeMax]);
       
       const sizeLegendG = svg.append("g")
+          .attr("class", "legend")
           .attr("transform", `translate(${sizeLegendX}, ${sizeLegendY})`);
       
       function renderSizeLegend(){
