--- a/units/unit-02/module-08/example-08/index.html
+++ b/units/unit-02/module-08/example-08/index.html
@@ -20,7 +20,7 @@
         font-size: 50px;
         fill: #635F5D;
       }
-      .legend text {
+      .legend .tick text {
         font-size: 30px;
         fill: #8E8883;
         font-family: sans-serif;
