First start at U1M10

--- a/units/unit-02/module-10/example-01/index.html
+++ b/units/unit-02/module-10/example-01/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Solution</title>
+    <title>Complete Scatter Plot</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   	<style>
       .axis .tick line {
@@ -36,6 +36,7 @@
   <body>
     <svg width="960" height="500"></svg>
     <script>
+      // Previous module exercise solution #2/9/8
       const xValue = d => d.sepalLength;
       const yValue = d => d.petalLength;
       const colorValue = d => d.species;
