Fix minor issues

--- a/units/unit-02/module-10/example-06/index.html
+++ b/units/unit-02/module-10/example-06/index.html
@@ -22,10 +22,7 @@
         
         const circles = selection.selectAll("circle").data(data);
         circles.exit().remove();
-        circles
-          .enter().append("circle")
-            .attr("r", 5)
-          .merge(circles)
+        circles.merge(circles.enter().append("circle"))
             .attr("cx", d => xScale(xValue(d)))
             .attr("cy", d => yScale(yValue(d)))
             .attr("fill", d => colorScale(colorValue(d)))
