--- a/units/unit-02/module-10/example-07/index.html
+++ b/units/unit-02/module-10/example-07/index.html
@@ -51,10 +51,7 @@
         
         const circles = selection.selectAll("circle").data(data);
         circles.exit().remove();
-        circles
-          .enter().append("circle")
-            .attr("r", 5)
-          .merge(circles)
+        circles.merge(circles.enter().append("circle"))
             .attr("cx", d => xScale(xValue(d)))
             .attr("cy", d => yScale(yValue(d)))
             .attr("fill", d => colorScale(colorValue(d)))
@@ -264,7 +261,7 @@
             })
             .call(sizeLegend, {
               scale: sizeScale,
-              label: "Species",
+              label: "Petal Width",
               x: 750,
               y: 285,
               spacing: 35,
