--- a/units/unit-02/module-10/example-07/index.html
+++ b/units/unit-02/module-10/example-07/index.html
@@ -206,7 +206,7 @@
         const tickFill = props.tickFill;
         const label = props.label;
         const labelX = props.labelX;
-        const labelY = props.x;
+        const labelY = props.labelY;
         
         let g = selection
           .selectAll(".legend--size")
@@ -265,7 +265,7 @@
         const tickRadius = props.tickRadius;
         const label = props.label;
         const labelX = props.labelX;
-        const labelY = props.x;
+        const labelY = props.labelY;
         
         let g = selection
           .selectAll(".legend--color")
