revise-u2-m8-color-legend

--- a/units/unit-02/module-08/example-01/index.html
+++ b/units/unit-02/module-08/example-01/index.html
@@ -21,6 +21,14 @@
           .attr("r", 12)
           .attr("fill", colorScale);
       
+      svg
+        .selectAll("text")
+        .data(colorScale.domain())
+        .enter().append("text")
+          .attr("x", 400)
+          .attr("y", (d, i) => i * 35 + 200)
+          .text(d => d);
+      
     </script>
   </body>
 </html>
